--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header">
             <h1>
-                <a href="index.html" class="link">BANDSITE</a>
+                <a href="index.html" class="header__logo">BANDSITE</a>
             </h1>
             <div class="header__sections">
                 <h3>
@@ -24,28 +24,29 @@
                 </h3>
             </div>
         </div>
-        <div class="header__image"></div>
-        <h1 class="header__image--modified">The Bees Knees</h1>
+        <div class="header__image">
+            <h1 class="header__image--modified">The Bees Knees</h1>
+        </div>
     </header>
 
     <!-- main content -->
-    <main>
+    <main class="main__content">
         <section>
             <h1 class="main__title">About the Musicians</h1>
-            <img src="/assets/Images/band.jpg" alt="Musicians-image" class="musicians__image">
+            <img src="/assets/Images/band.jpg" alt="Musicians-image" class="musicians__image main__title--margin">
             <p class="quote">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to
                 be better, back to the drawing board’”
-                <span>- Lead vocalist of The Bees Knees</span>
+                <p>- Lead vocalist of The Bees Knees</p>
             </p>
-            <h3>The Bees Knees</h3>
-            <p>The Bees Knees is a pop rock band originating from San Francisco, California. The band consists a dynamic
+            <h3 class="subtitle">The Bees Knees</h3>
+            <p class="main-paragraph">The Bees Knees is a pop rock band originating from San Francisco, California. The band consists a dynamic
                 lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a drummer. The band
                 achieved its first commercial success as an unsigned act, drawing attention from their future manager.
                 Having extensive experience working with both new and seasoned acts, the manager was confident the band
                 could succeed even further with more support, pushing The Bees Knees to sign with a well known record
                 label.
             </p>
-            <p>From there, the band has soared, gaining international recognition and ranking in the top 10 on the
+            <p class="main-paragraph">From there, the band has soared, gaining international recognition and ranking in the top 10 on the
                 Poster Charts. New fans immediately fell in love with the band’s original and organic attitude,
                 solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans
                 affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic
@@ -54,7 +55,7 @@
             </p>
         </section>
         <!-- photo gallery -->
-        <section>
+        <section class="gallery__background">
             <h1 class="main__title">Photo Gallery</h1>
             <img src="/assets/Images/Photo-gallery-1.jpg" alt="photo1" class="photogallery">
             <img src="/assets/Images/Photo-gallery-2.jpg" alt="photo2" class="photogallery">
@@ -69,15 +70,15 @@
     </main>
 
     <!-- footer -->
-    <footer>
+    <footer class="footer footer__background">
         <h1 class="main__title">Get in Touch</h1>
         <div class="social-media">
             <a href="https://www.instagram.com">
-                <img class="social-media__logo" src="" alt="instagram"></a>
+                <img class="social-media__logo" src="/assets/Icons/SVG/Icon-instagram.svg" alt="instagram"></a>
             <a href="https://www.facebook.com">
-                <img class="social-media__logo" src="" alt="facebook"></a>
+                <img class="social-media__logo" src="/assets/Icons/SVG/Icon-facebook.svg" alt="facebook"></a>
             <a href="https://www.yelp.com">
-                <img class="social-media__logo" src="" alt="twitter"></a>
+                <img class="social-media__logo" src="/assets/Icons/SVG/Icon-twitter.svg" alt="twitter"></a>
         </div>
         <div class="footer__info">
             <h3 class="info__title">The Bees Knees Management</h3>
