--- a/index.html
+++ b/index.html
@@ -17,36 +17,38 @@
             </h1>
             <div class="header__sections">
                 <h3>
-                    <a href="index.html" class="link section__titles">Biography</a>
+                    <a href="index.html" class="section__titles">Biography</a>
                 </h3>
                 <h3>
-                    <a href="" class="link section__titles">Shows</a>
+                    <a href="" class="section__titles">Shows</a>
                 </h3>
             </div>
         </div>
         <div class="header__image">
-            <h1 class="header__image--modified">The Bees Knees</h1>
+            <h1 class="header__image-title">The Bees Knees</h1>
         </div>
     </header>
 
     <!-- main content -->
-    <main class="main__content">
-        <section>
+    <main>
+        <section class="main__content">
             <h1 class="main__title">About the Musicians</h1>
             <img src="/assets/Images/band.jpg" alt="Musicians-image" class="musicians__image main__title--margin">
             <p class="quote">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to
                 be better, back to the drawing board’”
-                <p>- Lead vocalist of The Bees Knees</p>
+            <p class="quote">- Lead vocalist of The Bees Knees</p>
             </p>
             <h3 class="subtitle">The Bees Knees</h3>
-            <p class="main-paragraph">The Bees Knees is a pop rock band originating from San Francisco, California. The band consists a dynamic
+            <p class="main-paragraph">The Bees Knees is a pop rock band originating from San Francisco, California. The
+                band consists a dynamic
                 lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a drummer. The band
                 achieved its first commercial success as an unsigned act, drawing attention from their future manager.
                 Having extensive experience working with both new and seasoned acts, the manager was confident the band
                 could succeed even further with more support, pushing The Bees Knees to sign with a well known record
                 label.
             </p>
-            <p class="main-paragraph">From there, the band has soared, gaining international recognition and ranking in the top 10 on the
+            <p class="main-paragraph">From there, the band has soared, gaining international recognition and ranking in
+                the top 10 on the
                 Poster Charts. New fans immediately fell in love with the band’s original and organic attitude,
                 solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans
                 affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic
@@ -66,6 +68,7 @@
             <img src="/assets/Images/Photo-gallery-7.jpg" alt="photo7" class="photogallery">
             <img src="/assets/Images/Photo-gallery-8.jpg" alt="photo8" class="photogallery">
             <img src="/assets/Images/Photo-gallery-9.jpg" alt="photo9" class="photogallery">
+
         </section>
     </main>
 
@@ -81,26 +84,31 @@
                 <img class="social-media__logo" src="/assets/Icons/SVG/Icon-twitter.svg" alt="twitter"></a>
         </div>
         <div class="footer__info">
-            <h3 class="info__title">The Bees Knees Management</h3>
-            <p class="info__detail">503 Broadway Penthouse,
-                <span>New York, NY 10012, USA</span>
-                <span>info@thebeesknees.com</span>
-            </p>
-            <h3 class="info__title">Limitless Artist Group</h3>
-            <p class="info__detail">Booking Agent for
-                <span>US / South America / Japan</span>
-                <span>bookings@limitlessag.com</span>
-            </p>
-            <h3 class="info__title">ARCH Entertainment</h3>
-            <p class="info__detail">Booking Agent for
-                <span>UK / EU / AU</span>
-                <span>bookings@archentertainment.com</span>
-            </p>
+            <section class="footer__content">
+                <h3 class="info__title">The Bees Knees Management</h3>
+                <p class="info__detail"> 503 Broadway Penthouse,<br>New York, NY 10012, USA
+                <p>info@thebeesknees.com</p>
+                </p>
+            </section>
+
+            <section class="footer__content">
+                <h3 class="info__title">Limitless Artist Group</h3>
+                <p class="info__detail">Booking Agent for<br>US / South America / Japan
+                <p>bookings@limitlessag.com</p>
+                </p>
+            </section>
+
+            <section class="footer__content">
+                <h3 class="info__title">ARCH Entertainment</h3>
+                <p class="info__detail">Booking Agent for<br>UK / EU / AU
+                <p>bookings@archentertainment.com</p>
+                </p>
+            </section>
 
         </div>
 
-        <h1 class="bandsite__title">BANDSITE</h1>
-        <p>Copyright The Bees Knees © 2023 All Rights Reserved</p>
+        <h1 class="copyright">BANDSITE</h1>
+        <p class="copyright">Copyright The Bees Knees © 2023 All Rights Reserved</p>
     </footer>
 </body>
 
