--- a/index.html
+++ b/index.html
@@ -12,16 +12,10 @@
     <!-- header -->
     <header>
         <div class="header">
-            <h1>
-                <a href="index.html" class="header__logo">BANDSITE</a>
-            </h1>
+            <h1><a href="index.html" class="header__logo">BANDSITE</a></h1>
             <div class="header__sections">
-                <h3>
-                    <a href="index.html" class="section__titles">Biography</a>
-                </h3>
-                <h3>
-                    <a href="" class="section__titles">Shows</a>
-                </h3>
+                <h3><a href="index.html" class="section__titles">Biography</a></h3>
+                <h3><a href="" class="section__titles">Shows</a></h3>
             </div>
         </div>
         <div class="header__image">
@@ -34,27 +28,40 @@
         <section class="main__content">
             <h1 class="main__title">About the Musicians</h1>
             <img src="/assets/Images/band.jpg" alt="Musicians-image" class="musicians__image main__title--margin">
-            <p class="quote">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to
-                be better, back to the drawing board’”
-            <p class="quote">- Lead vocalist of The Bees Knees</p>
-            </p>
-            <h3 class="subtitle">The Bees Knees</h3>
-            <p class="main-paragraph">The Bees Knees is a pop rock band originating from San Francisco, California. The
-                band consists a dynamic
-                lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a drummer. The band
-                achieved its first commercial success as an unsigned act, drawing attention from their future manager.
-                Having extensive experience working with both new and seasoned acts, the manager was confident the band
-                could succeed even further with more support, pushing The Bees Knees to sign with a well known record
-                label.
-            </p>
-            <p class="main-paragraph">From there, the band has soared, gaining international recognition and ranking in
-                the top 10 on the
-                Poster Charts. New fans immediately fell in love with the band’s original and organic attitude,
-                solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans
-                affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic
-                performances on stage. The Bees Knees are currently recording their second studio album, looking to be
-                released in early 2024.
-            </p>
+            <div class="musician__text">
+                <p class="quote">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs
+                    to
+                    be better, back to the drawing board’”
+                <p class="quote">- Lead vocalist of The Bees Knees</p>
+                </p>
+
+                <h3 class="text__subtitle">The Bees Knees</h3>
+                <section class="text__sections">
+                    <section class="text__paragraph">The Bees Knees is a pop rock band originating from San Francisco, California.
+                    The
+                    band consists a dynamic
+                    lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a drummer. The
+                    band
+                    achieved its first commercial success as an unsigned act, drawing attention from their future
+                    manager.
+                    Having extensive experience working with both new and seasoned acts, the manager was confident the
+                    band
+                    could succeed even further with more support, pushing The Bees Knees to sign with a well known
+                    record
+                    label.
+                    </section>
+                    <section class="text__paragraph">From there, the band has soared, gaining international recognition and ranking
+                    in
+                    the top 10 on the
+                    Poster Charts. New fans immediately fell in love with the band’s original and organic attitude,
+                    solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans
+                    affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic
+                    performances on stage. The Bees Knees are currently recording their second studio album, looking to
+                    be
+                    released in early 2024.
+                    </section>
+                </section>
+            </div>
         </section>
         <!-- photo gallery -->
         <section class="gallery__background">
