update tablet version

--- a/index.html
+++ b/index.html
@@ -69,32 +69,37 @@
             </div>
         </section>
         <!-- photo gallery -->
-        <section class="gallery__background">
+        <section class="gallery__background main__content">
             <h1 class="main__title">Photo Gallery</h1>
-            <img src="/assets/Images/Photo-gallery-1.jpg" alt="photo1" class="photogallery">
-            <img src="/assets/Images/Photo-gallery-2.jpg" alt="photo2" class="photogallery">
-            <img src="/assets/Images/Photo-gallery-3.jpg" alt="photo3" class="photogallery">
-            <img src="/assets/Images/Photo-gallery-4.jpg" alt="photo4" class="photogallery">
-            <img src="/assets/Images/Photo-gallery-5.jpg" alt="photo5" class="photogallery">
-            <img src="/assets/Images/Photo-gallery-6.jpg" alt="photo6" class="photogallery">
-            <img src="/assets/Images/Photo-gallery-7.jpg" alt="photo7" class="photogallery">
-            <img src="/assets/Images/Photo-gallery-8.jpg" alt="photo8" class="photogallery">
-            <img src="/assets/Images/Photo-gallery-9.jpg" alt="photo9" class="photogallery">
-
+            <div class="photogallery">
+                <img src="/assets/Images/Photo-gallery-1.jpg" alt="photo1" class="photo">
+                <img src="/assets/Images/Photo-gallery-2.jpg" alt="photo2" class="photo">
+                <img src="/assets/Images/Photo-gallery-3.jpg" alt="photo3" class="photo">
+                <img src="/assets/Images/Photo-gallery-4.jpg" alt="photo4" class="photo">
+                <img src="/assets/Images/Photo-gallery-5.jpg" alt="photo5" class="photo">
+                <img src="/assets/Images/Photo-gallery-6.jpg" alt="photo6" class="photo">
+                <img src="/assets/Images/Photo-gallery-7.jpg" alt="photo7" class="photo">
+                <img src="/assets/Images/Photo-gallery-8.jpg" alt="photo8" class="photo">
+                <img src="/assets/Images/Photo-gallery-9.jpg" alt="photo9" class="photo">
+            </div>
         </section>
     </main>
 
     <!-- footer -->
     <footer class="footer footer__background">
-        <h1 class="main__title">Get in Touch</h1>
-        <div class="social-media">
-            <a href="https://www.instagram.com">
-                <img class="social-media__logo" src="/assets/Icons/SVG/Icon-instagram.svg" alt="instagram"></a>
-            <a href="https://www.facebook.com">
-                <img class="social-media__logo" src="/assets/Icons/SVG/Icon-facebook.svg" alt="facebook"></a>
-            <a href="https://www.yelp.com">
-                <img class="social-media__logo" src="/assets/Icons/SVG/Icon-twitter.svg" alt="twitter"></a>
+        <section class="social-media">
+            <h1 class="main__title">Get in Touch</h1>
+            <div class="apps">
+                <a href="https://www.instagram.com">
+                    <img class="social-media__logo" src="/assets/Icons/SVG/Icon-instagram.svg" alt="instagram"></a>
+                <a href="https://www.facebook.com">
+                    <img class="social-media__logo" src="/assets/Icons/SVG/Icon-facebook.svg" alt="facebook"></a>
+                <a href="https://www.yelp.com">
+                    <img class="social-media__logo" src="/assets/Icons/SVG/Icon-twitter.svg" alt="twitter"></a>
+            <h1 class="copyright--tablet">BANDSITE</h1>
         </div>
+            
+        </section>
         <div class="contact__info">
             <section class="contact__content">
                 <h3 class="contact__title">The Bees Knees Management</h3>
@@ -118,8 +123,7 @@
             </section>
 
         </div>
-
-        <h1 class="copyright">BANDSITE</h1>
+        <h1 class="copyright--mobile">BANDSITE</h1>
         <p class="copyright">Copyright The Bees Knees © 2023 All Rights Reserved</p>
     </footer>
 </body>
