--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <!-- main content -->
     <main>
         <section class="main__content">
-            <h1 class="main__title">About the Musicians</h1>
-            <img src="/assets/Images/band.jpg" alt="Musicians-image" class="musician__image main__title--margin">
+            <h1 class="main__subtitle">About the Musicians</h1>
+            <img src="/assets/Images/band.jpg" alt="Musicians-image" class="musician__image main__subtitle--margin">
             <div class="musician__text">
                 <p class="musician__quote">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs
                     to
@@ -35,7 +35,7 @@
                 <p class="musician__quote">- Lead vocalist of The Bees Knees</p>
                 </p>
 
-                <h3 class="paragraph__subtitle">The Bees Knees</h3>
+                <h3 class="paragraph__subheader">The Bees Knees</h3>
                 <section class="paragraph__sections">
                     <article class="paragraph__text">The Bees Knees is a pop rock band originating from San Francisco,
                         California.
@@ -70,7 +70,7 @@
         </section>
         <!-- photo gallery -->
         <section class="gallery__background main__content">
-            <h1 class="main__title">Photo Gallery</h1>
+            <h1 class="main__subtitle">Photo Gallery</h1>
             <div class="photogallery">
                 <img src="/assets/Images/Photo-gallery-1.jpg" alt="photo1" class="photo">
                 <img src="/assets/Images/Photo-gallery-2.jpg" alt="photo2" class="photo">
@@ -88,7 +88,7 @@
     <!-- footer -->
     <footer class="footer footer__background">
         <section class="social-media">
-            <h1 class="main__title">Get in Touch</h1>
+            <h1 class="main__subtitle">Get in Touch</h1>
             <div class="apps">
                 <a href="https://www.instagram.com">
                     <img class="social-media__logo" src="/assets/Icons/SVG/Icon-instagram.svg" alt="instagram"></a>
