--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="header">
             <h1><a href="index.html" class="header__logo">BANDSITE</a></h1>
             <div class="header__nav">
-                <h3><a href="index.html" class="header__nav-title">Biography</a></h3>
-                <h3><a href="" class="header__nav-title">Shows</a></h3>
+                <h3><a href="index.html" class="header__nav-title header__nav-title--bio">Biography</a></h3>
+                <h3><a href="" class="header__nav-title header__nav-title--shows">Shows</a></h3>
             </div>
         </div>
         <div class="header__image">
@@ -27,32 +27,24 @@
     <main>
         <section class="main__content">
             <h1 class="main__subtitle">About the Musicians</h1>
-            <img src="/assets/Images/band.jpg" alt="Musicians-image" class="musician__image main__subtitle--margin">
+            <div class="musician__image-container">
+                <img src="/assets/Images/band.jpg" alt="Musicians-image" class="musician__image main__subtitle--margin">
+            </div>
             <div class="musician__text">
-                <p class="musician__quote">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs
-                    to
-                    be better, back to the drawing board’”
-                <p class="musician__quote">- Lead vocalist of The Bees Knees</p>
+                <p class="musician__quote">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”
+                <p class="musician__quote musician__quote--name">- Lead vocalist of The Bees Knees</p>
                 </p>
 
-                <h3 class="paragraph__subheader">The Bees Knees</h3>
+                <p class="paragraph__subheader">The Bees Knees</p>
                 <section class="paragraph__sections">
                     <article class="paragraph__text">The Bees Knees is a pop rock band originating from San Francisco,
-                        California.
-                        The
-                        band consists a dynamic
-                        lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a drummer. The
-                        band
-                        achieved its first commercial success as an unsigned act, drawing attention from their future
-                        manager.
-                        Having extensive experience working with both new and seasoned acts, the manager was confident
-                        the
-                        band
-                        could succeed even further with more support, pushing The Bees Knees to sign with a well known
-                        record
-                        label.
+                        California. The band consists a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a drummer. The
+                        band achieved its first commercial success as an unsigned act, drawing attention from their future
+                        manager. Having extensive experience working with both new and seasoned acts, the manager was confident
+                        the band could succeed even further with more support, pushing The Bees Knees to sign with a well known
+                        record label.
                     </article>
-                    <article class="paragraph__text">From there, the band has soared, gaining international recognition
+                    <article class="paragraph__text paragraph__text--modified">From there, the band has soared, gaining international recognition
                         and ranking
                         in
                         the top 10 on the
@@ -88,7 +80,7 @@
     <!-- footer -->
     <footer class="footer footer__background">
         <section class="social-media">
-            <h1 class="main__subtitle">Get in Touch</h1>
+            <h1 class="footer__subtitle">Get in Touch</h1>
             <div class="apps">
                 <a href="https://www.instagram.com">
                     <img class="social-media__logo" src="/assets/Icons/SVG/Icon-instagram.svg" alt="instagram"></a>
@@ -97,28 +89,28 @@
                 <a href="https://www.yelp.com">
                     <img class="social-media__logo" src="/assets/Icons/SVG/Icon-twitter.svg" alt="twitter"></a>
             <h1 class="copyright--tablet">BANDSITE</h1>
-        </div>
+            </div>
             
         </section>
         <div class="contact__info">
             <section class="contact__content">
-                <h3 class="contact__title">The Bees Knees Management</h3>
+                <p class="contact__title">The Bees Knees Management</p>
                 <p class="contact__detail"> 503 Broadway Penthouse,<br>New York, NY 10012, USA
-                <p>info@thebeesknees.com</p>
+                <p class="contact__detail">info@thebeesknees.com</p>
                 </p>
             </section>
 
             <section class="contact__content">
-                <h3 class="contact__title">Limitless Artist Group</h3>
+                <p class="contact__title contact__title--modified">Limitless Artist Group</p>
                 <p class="contact__detail">Booking Agent for<br>US / South America / Japan
-                <p>bookings@limitlessag.com</p>
+                <p class="contact__detail">bookings@limitlessag.com</p>
                 </p>
             </section>
 
             <section class="contact__content">
-                <h3 class="contact__title">ARCH Entertainment</h3>
+                <p class="contact__title contact__title--modified">ARCH Entertainment</p>
                 <p class="contact__detail">Booking Agent for<br>UK / EU / AU
-                <p>bookings@archentertainment.com</p>
+                <p class="contact__detail">bookings@archentertainment.com</p>
                 </p>
             </section>
 
