final tablet version

--- a/index.html
+++ b/index.html
@@ -45,17 +45,11 @@
                         record label.
                     </article>
                     <article class="paragraph__text paragraph__text--modified">From there, the band has soared, gaining international recognition
-                        and ranking
-                        in
-                        the top 10 on the
-                        Poster Charts. New fans immediately fell in love with the band’s original and organic attitude,
+                        and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude,
                         solidifying their place as one of the hottest and fastest up and coming acts of this century.
-                        Fans
-                        affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic
+                        Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic
                         performances on stage. The Bees Knees are currently recording their second studio album, looking
-                        to
-                        be
-                        released in early 2024.
+                        to be released in early 2024.
                     </article>
                 </section>
             </div>
@@ -80,17 +74,16 @@
     <!-- footer -->
     <footer class="footer footer__background">
         <section class="social-media">
-            <h1 class="footer__subtitle">Get in Touch</h1>
-            <div class="apps">
-                <a href="https://www.instagram.com">
-                    <img class="social-media__logo" src="/assets/Icons/SVG/Icon-instagram.svg" alt="instagram"></a>
-                <a href="https://www.facebook.com">
-                    <img class="social-media__logo" src="/assets/Icons/SVG/Icon-facebook.svg" alt="facebook"></a>
-                <a href="https://www.yelp.com">
-                    <img class="social-media__logo" src="/assets/Icons/SVG/Icon-twitter.svg" alt="twitter"></a>
-            <h1 class="copyright--tablet">BANDSITE</h1>
-            </div>
-            
+                <h1 class="footer__subtitle">Get in Touch</h1>
+                <div class="apps">
+                    <a href="https://www.instagram.com">
+                        <img class="social-media__logo" src="/assets/Icons/SVG/Icon-instagram.svg" alt="instagram"></a>
+                    <a href="https://www.facebook.com">
+                        <img class="social-media__logo" src="/assets/Icons/SVG/Icon-facebook.svg" alt="facebook"></a>
+                    <a href="https://www.yelp.com">
+                        <img class="social-media__logo" src="/assets/Icons/SVG/Icon-twitter.svg" alt="twitter"></a>
+                </div>
+                <h1 class="copyright--tablet">BANDSITE</h1>
         </section>
         <div class="contact__info">
             <section class="contact__content">
