revise image height

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <main>
         <section class="main__content">
             <h1 class="main__subtitle">About the Musicians</h1>
-            <div class="musician__image-container">
+            <!-- <div class="musician__image-container"> -->
                 <img src="/assets/Images/band.jpg" alt="Musicians-image" class="musician__image main__subtitle--margin">
-            </div>
+            <!-- </div> -->
             <div class="musician__text">
                 <p class="musician__quote">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”
                 <p class="musician__quote musician__quote--name">- Lead vocalist of The Bees Knees</p>
