mobile: add hover feature on nav bar

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="header">
             <h1><a href="index.html" class="header__logo">BANDSITE</a></h1>
             <div class="header__nav">
-                <h3><a href="index.html" class="header__nav-title header__nav-title--bio">Biography</a></h3>
-                <h3><a href="" class="header__nav-title header__nav-title--shows">Shows</a></h3>
+                <h3><a href="index.html" class="header__nav-title header__nav--bio">Biography</a></h3>
+                <h3><a href="" class="header__nav-title header__nav--shows">Shows</a></h3>
             </div>
         </div>
         <div class="header__image">
