final version: diving deeper completed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-    <!-- header -->
     <header>
         <div class="header">
             <h1><a href="index.html" class="header__logo">BANDSITE</a></h1>
@@ -23,33 +22,21 @@
         </div>
     </header>
 
-    <!-- main content -->
     <main>
         <section class="main__content">
             <h1 class="main__subtitle">About the Musicians</h1>
-            <!-- <div class="musician__image-container"> -->
-                <img src="/assets/Images/band.jpg" alt="Musicians-image" class="musician__image main__subtitle--margin">
-            <!-- </div> -->
+            <img src="/assets/Images/band.jpg" alt="Musicians-image" class="musician__image main__subtitle--margin">
             <div class="musician__text">
                 <p class="musician__quote">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”
                 <p class="musician__quote musician__quote--name">- Lead vocalist of The Bees Knees</p>
                 </p>
-
                 <p class="paragraph__subheader">The Bees Knees</p>
                 <section class="paragraph__sections">
-                    <article class="paragraph__text">The Bees Knees is a pop rock band originating from San Francisco,
-                        California. The band consists a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a drummer. The
-                        band achieved its first commercial success as an unsigned act, drawing attention from their future
-                        manager. Having extensive experience working with both new and seasoned acts, the manager was confident
-                        the band could succeed even further with more support, pushing The Bees Knees to sign with a well known
-                        record label.
+                    <article class="paragraph__text">The Bees Knees is a pop rock band originating from San Francisco, California. The band consists a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a drummer. The band achieved its first commercial success as an unsigned act, drawing attention from their
+                        future manager. Having extensive experience working with both new and seasoned acts, the manager was confident the band could succeed even further with more support, pushing The Bees Knees to sign with a well known record label.
                     </article>
-                    <article class="paragraph__text paragraph__text--modified">From there, the band has soared, gaining international recognition
-                        and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude,
-                        solidifying their place as one of the hottest and fastest up and coming acts of this century.
-                        Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic
-                        performances on stage. The Bees Knees are currently recording their second studio album, looking
-                        to be released in early 2024.
+                    <article class="paragraph__text paragraph__text--modified">From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude,solidifying their place as one of the hottest and fastest up and coming acts of this century.
+                        Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. The Bees Knees are currently recording their second studio album, looking to be released in early 2024.
                     </article>
                 </section>
             </div>
@@ -58,52 +45,50 @@
         <section class="gallery__background main__content">
             <h1 class="main__subtitle">Photo Gallery</h1>
             <div class="photogallery">
-                <img src="/assets/Images/Photo-gallery-1.jpg" alt="photo1" class="photo">
-                <img src="/assets/Images/Photo-gallery-2.jpg" alt="photo2" class="photo">
-                <img src="/assets/Images/Photo-gallery-3.jpg" alt="photo3" class="photo">
-                <img src="/assets/Images/Photo-gallery-4.jpg" alt="photo4" class="photo">
-                <img src="/assets/Images/Photo-gallery-5.jpg" alt="photo5" class="photo">
-                <img src="/assets/Images/Photo-gallery-6.jpg" alt="photo6" class="photo">
-                <img src="/assets/Images/Photo-gallery-7.jpg" alt="photo7" class="photo">
-                <img src="/assets/Images/Photo-gallery-8.jpg" alt="photo8" class="photo">
-                <img src="/assets/Images/Photo-gallery-9.jpg" alt="photo9" class="photo">
+                <img src="/assets/Images/Photo-gallery-1.jpg" alt="photo1" class="photo photo-filter">
+                <img src="/assets/Images/Photo-gallery-2.jpg" alt="photo2" class="photo photo-filter">
+                <img src="/assets/Images/Photo-gallery-3.jpg" alt="photo3" class="photo photo-filter">
+                <img src="/assets/Images/Photo-gallery-4.jpg" alt="photo4" class="photo photo-filter">
+                <img src="/assets/Images/Photo-gallery-5.jpg" alt="photo5" class="photo photo-filter">
+                <img src="/assets/Images/Photo-gallery-6.jpg" alt="photo6" class="photo photo-filter">
+                <img src="/assets/Images/Photo-gallery-7.jpg" alt="photo7" class="photo photo-filter">
+                <img src="/assets/Images/Photo-gallery-8.jpg" alt="photo8" class="photo photo-filter">
+                <img src="/assets/Images/Photo-gallery-9.jpg" alt="photo9" class="photo photo-filter">
             </div>
         </section>
     </main>
 
-    <!-- footer -->
     <footer class="footer footer__background">
         <section class="social-media">
-                <h1 class="footer__subtitle">Get in Touch</h1>
-                <div class="apps">
-                    <a href="https://www.instagram.com">
-                        <img class="social-media__logo" src="/assets/Icons/SVG/Icon-instagram.svg" alt="instagram"></a>
-                    <a href="https://www.facebook.com">
-                        <img class="social-media__logo" src="/assets/Icons/SVG/Icon-facebook.svg" alt="facebook"></a>
-                    <a href="https://www.yelp.com">
-                        <img class="social-media__logo" src="/assets/Icons/SVG/Icon-twitter.svg" alt="twitter"></a>
-                </div>
-                <h1 class="copyright--tablet">BANDSITE</h1>
+            <h1 class="footer__subtitle">Get in Touch</h1>
+            <div class="apps">
+                <a href="https://www.instagram.com">
+                    <img class="social-media__logo" src="/assets/Icons/SVG/Icon-instagram.svg" alt="instagram"></a>
+                <a href="https://www.facebook.com">
+                    <img class="social-media__logo" src="/assets/Icons/SVG/Icon-facebook.svg" alt="facebook"></a>
+                <a href="https://www.yelp.com">
+                    <img class="social-media__logo" src="/assets/Icons/SVG/Icon-twitter.svg" alt="twitter"></a>
+            </div>
+            <h1 class="copyright--tablet">BANDSITE</h1>
         </section>
         <div class="contact__info">
             <section class="contact__content">
                 <p class="contact__title">The Bees Knees Management</p>
                 <p class="contact__detail"> 503 Broadway Penthouse,<br>New York, NY 10012, USA
-                <p class="contact__detail">info@thebeesknees.com</p>
-                </p>
+                <p><a href="mailto:info@thebeesknees.com" class="mailto">info@thebeesknees.com</a></p>
             </section>
 
             <section class="contact__content">
                 <p class="contact__title contact__title--modified">Limitless Artist Group</p>
                 <p class="contact__detail">Booking Agent for<br>US / South America / Japan
-                <p class="contact__detail">bookings@limitlessag.com</p>
+                <p><a href="mailto:bookings@limitlessag.com" class="mailto">bookings@limitlessag.com</a></p>
                 </p>
             </section>
 
             <section class="contact__content">
                 <p class="contact__title contact__title--modified">ARCH Entertainment</p>
                 <p class="contact__detail">Booking Agent for<br>UK / EU / AU
-                <p class="contact__detail">bookings@archentertainment.com</p>
+                <p><a href="mailto:bookings@archentertainment.com" class="mailto">bookings@archentertainment.com</a></p>
                 </p>
             </section>
 
