address sprint-1 feedback

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <section class="main__content">
             <h1 class="main__subtitle">About the Musicians</h1>
-            <img src="/assets/Images/band.jpg" alt="Musicians-image" class="musician__image main__subtitle--margin">
+            <img src="/assets/images/band.jpg" alt="Musicians-image" class="musician__image main__subtitle--margin">
             <div class="musician__text">
                 <p class="musician__quote">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”
                 <p class="musician__quote musician__quote--name">- Lead vocalist of The Bees Knees</p>
@@ -45,15 +45,15 @@
         <section class="gallery__background main__content">
             <h1 class="main__subtitle">Photo Gallery</h1>
             <div class="photogallery">
-                <img src="/assets/Images/Photo-gallery-1.jpg" alt="photo1" class="photo photo-filter">
-                <img src="/assets/Images/Photo-gallery-2.jpg" alt="photo2" class="photo photo-filter">
-                <img src="/assets/Images/Photo-gallery-3.jpg" alt="photo3" class="photo photo-filter">
-                <img src="/assets/Images/Photo-gallery-4.jpg" alt="photo4" class="photo photo-filter">
-                <img src="/assets/Images/Photo-gallery-5.jpg" alt="photo5" class="photo photo-filter">
-                <img src="/assets/Images/Photo-gallery-6.jpg" alt="photo6" class="photo photo-filter">
-                <img src="/assets/Images/Photo-gallery-7.jpg" alt="photo7" class="photo photo-filter">
-                <img src="/assets/Images/Photo-gallery-8.jpg" alt="photo8" class="photo photo-filter">
-                <img src="/assets/Images/Photo-gallery-9.jpg" alt="photo9" class="photo photo-filter">
+                <img src="/assets/images/Photo-gallery-1.jpg" alt="pink power in air" class="photo photo-filter">
+                <img src="/assets/images/Photo-gallery-2.jpg" alt="girl dancing" class="photo photo-filter">
+                <img src="/assets/images/Photo-gallery-3.jpg" alt="hands in air" class="photo photo-filter">
+                <img src="/assets/images/Photo-gallery-4.jpg" alt="girl backview" class="photo photo-filter">
+                <img src="/assets/images/Photo-gallery-5.jpg" alt="hands in air with colorful ribbon in air" class="photo photo-filter">
+                <img src="/assets/images/Photo-gallery-6.jpg" alt="singer" class="photo photo-filter">
+                <img src="/assets/images/Photo-gallery-7.jpg" alt="concert scene" class="photo photo-filter">
+                <img src="/assets/images/Photo-gallery-8.jpg" alt="JD keyboard" class="photo photo-filter">
+                <img src="/assets/images/Photo-gallery-9.jpg" alt="hands in air with white ribbon" class="photo photo-filter">
             </div>
         </section>
     </main>
@@ -69,7 +69,7 @@
                 <a href="https://www.yelp.com">
                     <img class="social-media__logo" src="/assets/Icons/SVG/Icon-twitter.svg" alt="twitter"></a>
             </div>
-            <h1 class="copyright--tablet">BANDSITE</h1>
+            <h1><a href="index.html" class="copyright--tablet">BANDSITE</a></h1>
         </section>
         <div class="contact__info">
             <section class="contact__content">
@@ -87,13 +87,12 @@
 
             <section class="contact__content">
                 <p class="contact__title contact__title--modified">ARCH Entertainment</p>
-                <p class="contact__detail">Booking Agent for<br>UK / EU / AU
+                <p class="contact__detail">Booking Agent for<br>UK / EU / AU</p>
                 <p><a href="mailto:bookings@archentertainment.com" class="mailto">bookings@archentertainment.com</a></p>
-                </p>
             </section>
 
         </div>
-        <h1 class="copyright--mobile">BANDSITE</h1>
+        <h1><a href="index.html" class="copyright--mobile">BANDSITE</a></h1>
         <p class="copyright">Copyright The Bees Knees © 2023 All Rights Reserved</p>
     </footer>
 </body>
