address all sprint-1 feedback

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -23,10 +23,11 @@
         </div>
     </header>
 
-
-
+    <main>
+        <ul class="shows-list"></ul>
+        <script src="../scripts/build-shows-page.js"></script>
+    </main>
     
-
 
     <footer class="footer footer__background">
         <section class="social-media">
