--- a/index.html
+++ b/index.html
@@ -25,18 +25,31 @@
     <main>
         <section class="main__content">
             <h1 class="main__subtitle">About the Musicians</h1>
-            <img src="/assets/images/band.jpg" alt="Musicians-image" class="musician__image main__subtitle--margin">
+            <div class="image__container">
+                <img src="/assets/images/band.jpg" alt="Musicians-image" class="musician__image main__subtitle--margin">
+            </div>
             <div class="musician__text">
-                <p class="musician__quote">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”
+                <p class="musician__quote">“We push each other to be the best. It’s not uncommon for one of us to say
+                    ‘this needs to be better, back to the drawing board’”
                 <p class="musician__quote musician__quote--name">- Lead vocalist of The Bees Knees</p>
                 </p>
                 <p class="paragraph__subheader">The Bees Knees</p>
                 <section class="paragraph__sections">
-                    <article class="paragraph__text">The Bees Knees is a pop rock band originating from San Francisco, California. The band consists a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a drummer. The band achieved its first commercial success as an unsigned act, drawing attention from their
-                        future manager. Having extensive experience working with both new and seasoned acts, the manager was confident the band could succeed even further with more support, pushing The Bees Knees to sign with a well known record label.
+                    <article class="paragraph__text">The Bees Knees is a pop rock band originating from San Francisco,
+                        California. The band consists a dynamic lineup featuring two lead vocalists, two guitarists, a
+                        bassist, a keyboardist and a drummer. The band achieved its first commercial success as an
+                        unsigned act, drawing attention from their
+                        future manager. Having extensive experience working with both new and seasoned acts, the manager
+                        was confident the band could succeed even further with more support, pushing The Bees Knees to
+                        sign with a well known record label.
                     </article>
-                    <article class="paragraph__text paragraph__text--modified">From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude,solidifying their place as one of the hottest and fastest up and coming acts of this century.
-                        Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. The Bees Knees are currently recording their second studio album, looking to be released in early 2024.
+                    <article class="paragraph__text paragraph__text--modified">From there, the band has soared, gaining
+                        international recognition and ranking in the top 10 on the Poster Charts. New fans immediately
+                        fell in love with the band’s original and organic attitude,solidifying their place as one of the
+                        hottest and fastest up and coming acts of this century.
+                        Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and
+                        authentic performances on stage. The Bees Knees are currently recording their second studio
+                        album, looking to be released in early 2024.
                     </article>
                 </section>
             </div>
@@ -49,14 +62,44 @@
                 <img src="/assets/images/Photo-gallery-2.jpg" alt="girl dancing" class="photo photo-filter">
                 <img src="/assets/images/Photo-gallery-3.jpg" alt="hands in air" class="photo photo-filter">
                 <img src="/assets/images/Photo-gallery-4.jpg" alt="girl backview" class="photo photo-filter">
-                <img src="/assets/images/Photo-gallery-5.jpg" alt="hands in air with colorful ribbon in air" class="photo photo-filter">
+                <img src="/assets/images/Photo-gallery-5.jpg" alt="hands in air with colorful ribbon in air"
+                    class="photo photo-filter">
                 <img src="/assets/images/Photo-gallery-6.jpg" alt="singer" class="photo photo-filter">
                 <img src="/assets/images/Photo-gallery-7.jpg" alt="concert scene" class="photo photo-filter">
                 <img src="/assets/images/Photo-gallery-8.jpg" alt="JD keyboard" class="photo photo-filter">
-                <img src="/assets/images/Photo-gallery-9.jpg" alt="hands in air with white ribbon" class="photo photo-filter">
+                <img src="/assets/images/Photo-gallery-9.jpg" alt="hands in air with white ribbon"
+                    class="photo photo-filter">
             </div>
         </section>
+
+<!-- form -->
+<!-- form -->
+<!-- form -->
+<!-- form -->         
+        <form class="form" method="GET">
+            <h1 class="form__title main__subtitle">Join the Conversation</h1>
+            <div class="form__content">
+                <div class="form__avatar"></div>
+
+                <div class="form__comment">
+                    <label class="form__label" for="name">NAME</label>
+                    <input class="form__input" type="text" id="name" name="name" placeholder="Enter your name">
+
+                    <label class="form__label form__label--modified" for="comment">COMMENT</label>
+                    <textarea class="form__input" name="comment" id="comment" placeholder="Add a new comment"></textarea>
+
+                    <button class="form__comment-button" type="submit">COMMENT</button>
+                </div>
+            </div>
+        </form>
+        <ul>
+            <!-- ul stays query selector everything under using js-->
+            <li>
+                <div></div>
+            </li>
+        </ul>
     </main>
+
 
     <footer class="footer footer__background">
         <section class="social-media">
