complete shows page - mobile

--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
             </section>
 
         </div>
-        <h1><a href="index.html" class="copyright--mobile">BANDSITE</a></h1>
+        <div class="footer__title--bottom">
+            <h1><a href="index.html" class="copyright--mobile">BANDSITE</a></h1>
+        </div>
         <p class="copyright">Copyright The Bees Knees © 2023 All Rights Reserved</p>
     </footer>
 </body>
