--- a/pages/shows.html
+++ b/pages/shows.html
@@ -13,8 +13,8 @@
         <div class="header">
             <h1><a href="index.html" class="header__logo">BANDSITE</a></h1>
             <div class="header__nav">
-                <h3><a href="index.html" class="header__nav-title header__nav--shows">Biography</a></h3>
-                <h3><a href="" class="header__nav-title header__nav--shows">Shows</a></h3>
+                <h3><a href="../index.html" class="header__nav-title header__nav--bios">Biography</a></h3>
+                <h3><a href="shows.html" class="header__nav-title header__nav--shows">Shows</a></h3>
             </div>
         </div>
         <div class="header__image">
@@ -72,5 +72,5 @@
     </div>
     <p class="copyright">Copyright The Bees Knees © 2023 All Rights Reserved</p>
 </footer>
-<script src="../scripts/build-shows-page.js"></script>
+<script src="../scripts/build-shows-page.js" defer></script>
 </html>
