--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
                 </p>
                 <p class="paragraph__subheader">The Bees Knees</p>
                 <section class="paragraph__sections">
-                    <article class="paragraph__text">The Bees Knees is a pop rock band originating from San Francisco,
+                    <div class="paragraph__text">The Bees Knees is a pop rock band originating from San Francisco,
                         California. The band consists a dynamic lineup featuring two lead vocalists, two guitarists, a
                         bassist, a keyboardist and a drummer. The band achieved its first commercial success as an
                         unsigned act, drawing attention from their
                         future manager. Having extensive experience working with both new and seasoned acts, the manager
                         was confident the band could succeed even further with more support, pushing The Bees Knees to
                         sign with a well known record label.
-                    </article>
-                    <article class="paragraph__text paragraph__text--modified">From there, the band has soared, gaining
+                    </div>
+                    <div class="paragraph__text paragraph__text--modified">From there, the band has soared, gaining
                         international recognition and ranking in the top 10 on the Poster Charts. New fans immediately
                         fell in love with the band’s original and organic attitude,solidifying their place as one of the
                         hottest and fastest up and coming acts of this century.
                         Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and
                         authentic performances on stage. The Bees Knees are currently recording their second studio
                         album, looking to be released in early 2024.
-                    </article>
+                    </div>
                 </section>
             </div>
         </section>
