bio page api set up

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/bio.css">
+    <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="./scripts/band-site-api.js" defer></script>
     <script src="./scripts/index-page.js" defer></script>
 </head>
 
@@ -33,7 +35,6 @@
                 <p class="musician__quote">“We push each other to be the best. It’s not uncommon for one of us to say
                     ‘this needs to be better, back to the drawing board’”
                 <p class="musician__quote musician__quote--name">- Lead vocalist of The Bees Knees</p>
-                </p>
                 <p class="paragraph__subheader">The Bees Knees</p>
                 <section class="paragraph__sections">
                     <div class="paragraph__text">The Bees Knees is a pop rock band originating from San Francisco,
@@ -133,8 +134,7 @@
 
         </div>
         <div class="footer__title--bottom">
-            <h1><a href="index.html" class="copyright--mobile">BANDSITE</a></h1>
-        </div>
+            <h1><a href="index.html" class="copyright--mobile">BANDSITE</a></h1></div>
         <p class="copyright">Copyright The Bees Knees © 2023 All Rights Reserved</p>
     </footer>
 </body>
