--- a/index.html
+++ b/index.html
@@ -135,8 +135,4 @@
         </div>
         <div class="footer__title--bottom">
             <h1><a href="index.html" class="copyright--mobile">BANDSITE</a></h1></div>
-        <p class="copyright">Copyright The Bees Knees © 2023 All Rights Reserved</p>
-    </footer>
-</body>
-
-</html>
+        <p class="copyright">Copyright The Bees Knees © 
