--- a/pages/shows.html
+++ b/pages/shows.html
@@ -6,6 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="../styles/bio.css">
     <link rel="stylesheet" href="../styles/shows.css">
+    <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="../scripts/band-site-api.js" defer></script>
+    <script src="../scripts/build-shows-page.js" defer></script>
 </head>
 
 <body>
@@ -85,5 +88,4 @@
     </div>
     <p class="copyright">Copyright The Bees Knees © 2023 All Rights Reserved</p>
 </footer>
-<script src="../scripts/build-shows-page.js" defer></script>
 </html>
