implement feedback suggestions

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="header">
             <h1><a href="index.html" class="header__logo">BANDSITE</a></h1>
             <div class="header__nav">
-                <h3><a href="index.html" class="header__nav-title header__nav--bio">Biography</a></h3>
-                <h3><a href="./pages/shows.html" class="header__nav-title header__nav--show">Shows</a></h3>
+                <h3><a href="index.html" class="header__nav-title bio">Biography</a></h3>
+                <h3><a href="./pages/shows.html" class="header__nav-title show">Shows</a></h3>
             </div>
         </div>
         <div class="header__image">
@@ -32,8 +32,7 @@
                 <img src="/assets/images/band.jpg" alt="Musicians-image" class="musician__image main__subtitle--margin">
             </div>
             <div class="musician__text">
-                <p class="musician__quote">“We push each other to be the best. It’s not uncommon for one of us to say
-                    ‘this needs to be better, back to the drawing board’”
+                <p class="musician__quote">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”</p>
                 <p class="musician__quote musician__quote--name">- Lead vocalist of The Bees Knees</p>
                 <p class="paragraph__subheader">The Bees Knees</p>
                 <section class="paragraph__sections">
@@ -121,9 +120,8 @@
 
             <section class="contact__content">
                 <p class="contact__title contact__title--modified">Limitless Artist Group</p>
-                <p class="contact__detail">Booking Agent for<br>US / South America / Japan
+                <p class="contact__detail">Booking Agent for<br>US / South America / Japan</p>
                 <p><a href="mailto:bookings@limitlessag.com" class="mailto">bookings@limitlessag.com</a></p>
-                </p>
             </section>
 
             <section class="contact__content">
@@ -134,5 +132,10 @@
 
         </div>
         <div class="footer__title--bottom">
-            <h1><a href="index.html" class="copyright--mobile">BANDSITE</a></h1></div>
-        <p class="copyright">Copyright The Bees Knees © 
+            <h1><a href="index.html" class="copyright--mobile">BANDSITE</a></h1>
+        </div>
+        <p class="copyright">Copyright The Bees Knees © 2023 All Rights Reserved</p>
+    </footer>
+</body>
+
+</html>
